Added NLP support and all basic functionality

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,7 +11,7 @@
             {% endfor %}
           </ol>
         {% else %}
-          <p>No addresses for this user</p>
+          <p>No Todos for this user</p>
         {% endif %}
       </li>
     {% endfor %}
